# Tcds_orac

./: LICENSE  README.md  analyzer.py  emotions.py  index.html  memory.py  pyproject.toml
docs/data/: status.sample.json
src/tcds/: __init__.py
src/tcds/cognitive/: __init__.py
src/tcds/core/: sigma_metrics.py
src/tcds/governance/: __init__.py  io.py  oracle.py  veto.py
src/tcds_muse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tcds/core/: __init__.py  entropy.py
tcds_muse.egg-info/: top_level.txt
